src/objects/Minimum_Spend__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Apply_To_Membership_Types__c</fullName>
        <globalPicklist>Membership_Type</globalPicklist>
        <label>Auto Apply To Membership Types</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Auto_Apply_to_Relationship__c</fullName>
        <globalPicklist>Relationship</globalPicklist>
        <label>Auto Apply to Relationship</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_apply_to_Status__c</fullName>
        <globalPicklist>Status</globalPicklist>
        <label>Auto apply to Status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_Service_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Service Charges?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Taxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Taxes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Period_10_Amount__c</fullName>
        <label>Period 10: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_10_End_Date__c</fullName>
        <label>Period 10: End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_10_Start_Date__c</fullName>
        <label>Period 10: Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_11_Amount__c</fullName>
        <label>Period 11: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_11_End_Date__c</fullName>
        <label>Period 11: End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_11_Start_Date__c</fullName>
        <label>Period 11: Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_12_Amount__c</fullName>
        <label>Period 12: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_12_End_Date__c</fullName>
        <label>Period 12: End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_12_Start_Date__c</fullName>
        <label>Period 12: Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_Description__c</fullName>
        <label>Statement Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Total__c</fullName>
        <formula>IF(RecordType.DeveloperName == &apos;Monthly&apos;, Period_1_Amount__c  + Period_2_Amount__c  +Period_3_Amount__c  +Period_4_Amount__c  +Period_5_Amount__c  +Period_6_Amount__c  +Period_7_Amount__c  +Period_8_Amount__c  +Period_9_Amount__c  +Period_10_Amount__c  +Period_11_Amount__c  +Period_12_Amount__c  ,IF(RecordType.DeveloperName==&apos;Quarterly&apos;, Period_1_Amount__c  + Period_2_Amount__c  +Period_3_Amount__c  +Period_4_Amount__c,IF(RecordType.DeveloperName==&apos;Semi-Annual&apos;,Period_1_Amount__c  + Period_2_Amount__c,Period_1_Amount__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Minimum Spend</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Minimum Spend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Minimum Spends</pluralLabel>
    <recordTypes>
        <fullName>Annual</fullName>
        <active>true</active>
        <label>Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quarterly</fullName>
        <active>true</active>
        <label>Quarterly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Semi_Annual</fullName>
        <active>true</active>
        <label>Semi-Annual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>